Fix modal button alignment for chrome

--- a/server/GameServer/wwwroot/style.css
+++ b/server/GameServer/wwwroot/style.css
@@ -22,12 +22,13 @@ body {
     width:50%;
     display:flex;
     align-items:center;
-    justify-content: end;
+    justify-content: flex-end;
 }
 .share-btn{
     display:flex;
     align-items:center;
-    margin-inline:3px;
+    margin-left:3px;
+    margin-right:3px;
 }
 /* END MODAL AND SHARE BUTTONS*/
 
